Update1 aiml.html

--- a/aiml.html
+++ b/aiml.html
@@ -31,7 +31,6 @@
         </div>
     </div>
 
-
     <div class="section">
 
         <div class="section-items">
@@ -59,8 +58,13 @@
             assumenda aperiam mollitia. Odio, velit explicabo.
         </div>
     </div>
+
+    <div class="questions">
+
+    </div>
+    
     <div class="gototop">
-        <li><a href="#home"><button>Up</button></a></li>
+        <a href="#home"><button>⬆</button></a>
     </div>
     <footer id="footer">
         <div class="footer-items" id="shivalik">
@@ -82,10 +86,13 @@ Uttrakhand 248197
 President
 Vice-President
 Secratary
-Tresurer
+Treasurer
             </pre>
         </div>
     </footer>
+    <div class="copyright">
+        Copyright &copy; www.myAIMLclub.com. All rights reserved.
+    </div>
 </body>
 
 </html>
