Update3 index.html

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         
     </div>
     
-    <div class="gototop">
+<!--     <div class="gototop">
         <a href="#home"><button>⬆</button></a>
-    </div>
+    </div> -->
     <footer id="footer">
         <div class="footer-items" id="shivalik">
             <img src="shivalik_logo.png" loading="lazy">
