Update_bg index.html

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                 <img src="svg-formatter-beautifier.png">
                 <!-- <img src="logo_single.png"> -->
             </div>
-            <nav id="navbar">
+            <div id="navbar">
                 <li id="nav-item"><a href="#">Home</a></li>
                 <li id="nav-item"><a href="#">About</a></li>
                 <li id="nav-item"><a href="#">Other Clubs</a></li>
                 <li id="nav-item"><a href=#footer>Contact Us</a></li>
-            </nav>
+            </div>
+            <div class="options">=</div>
 
         </div>
         <div class="intro-section">
@@ -104,7 +105,7 @@
         
     </div>
     
-<!--     <div class="gototop">
+    <!-- <div class="gototop">
         <a href="#home"><button>⬆</button></a>
     </div> -->
     <footer id="footer">
