--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <!-- <img src="logo_single.png"> -->
             </div>
             <div id="navbar">
-                <li id="nav-item"><a href="#">Home</a></li>
-                <li id="nav-item"><a href="#">About</a></li>
-                <li id="nav-item"><a href="#">Other Clubs</a></li>
+                <li id="nav-item"><a href="#home">Home</a></li>
+                <li id="nav-item"><a href="#about">About</a></li>
+                <li id="nav-item"><a href="#services">Services</a></li>
                 <li id="nav-item"><a href=#footer>Contact Us</a></li>
             </div>
             <div class="options">=</div>
@@ -36,11 +36,11 @@
 
                 At ALICE, we foster a collaborative environment that encourages knowledge sharing, hands-on experimentation, and intellectual growth.
             </div>
-            <button><a href="#">Enroll Now</a></button>
+            <button><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxISnx4Gxg-1IDu4QEGTU42c6daJAmp6ZUru456UVuk2vpxg/viewform" target="_blank">Enroll Now</a></button>
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="services">
 
         <div class="section-items">
             
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="questions">
+    <div class="questions" id="about">
         <ul class="faq">
             <li>
                 <input type="radio" name="question" id="1">
@@ -125,10 +125,10 @@ Uttrakhand 248197
         <div class="footer-items" id="contact">
             <label>Contact US</label>
             <pre>
-<a href="#">President</a>
-<a href="#">Vice-President</a>
-<a href="#">Secratary</a>
-<a href="#">Treasurer</a>
+<a href="https://www.linkedin.com/in/harsh-vardhan-2878a0229/">President</a>
+<a href="https://www.linkedin.com/in/uday-gupta-97845b201/">Vice-President</a>
+<a href="https://www.linkedin.com/in/kriti-jaiswal-8964ba250/">Secratary</a>
+<a href="https://www.linkedin.com/in/anmol-gupta-b6a8b7228/">Treasurer</a>
             </pre>
         </div>
     </footer>
