Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="navbar">
                 <li id="nav-item"><a href="#home">Home</a></li>
                 <li id="nav-item"><a href="#about">About</a></li>
-                <li id="nav-item"><a href="#services">Services</a></li>
+                <li id="nav-item"><a href="#services">Activities</a></li>
                 <li id="nav-item"><a href=#footer>Contact Us</a></li>
             </div>
             <div class="options">=</div>
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-    <div class="services">
-        <h1>Our Services</h1>
+    <div class="services" id="services">
+        <h1>Our Activities</h1>
         <div class="section">
 
             <div class="section-items">
@@ -148,7 +148,7 @@
             <pre>
 Shimla Bypass Rd, Shiniwala,
 P.O, Sherpur, Dehradun
-Uttrakhand 248197
+Uttarakhand 248197
             </pre>
         </div>
         <div class="footer-items" id="contact">
@@ -156,7 +156,7 @@ Uttrakhand 248197
             <pre>
 <a href="https://www.linkedin.com/in/harsh-vardhan-2878a0229/">President</a>
 <a href="https://www.linkedin.com/in/uday-gupta-97845b201/">Vice-President</a>
-<a href="https://www.linkedin.com/in/kriti-jaiswal-8964ba250/">Secratary</a>
+<a href="https://www.linkedin.com/in/kriti-jaiswal-8964ba250/">Secretary</a>
 <a href="https://www.linkedin.com/in/anmol-gupta-b6a8b7228/">Treasurer</a>
             </pre>
         </div>
