Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 At ALICE, we foster a collaborative environment that encourages knowledge sharing, hands-on experimentation, and intellectual growth.
             </div>
-            <button><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxISnx4Gxg-1IDu4QEGTU42c6daJAmp6ZUru456UVuk2vpxg/viewform" target="_blank">Enroll Now</a></button>
+            <button><a href="https://forms.gle/bRuoJeEAjkXhaEyi7" target="_blank">Enroll Now</a></button>
         </div>
     </div>
 
