Update-pre index.html

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         
     </div>
 
-    <div class="services" id="services">
-        <h1>Our Activities</h1>
+<!--     <div class="services" id="services">
+        <h1>Our Activities</h1> -->
         <div class="section">
 
             <div class="section-items">
@@ -93,23 +93,24 @@
                 ALICE is not just a club, it's a gateway to transforming ideas into reality, pushing boundaries, and contributing to a future shaped by cutting-edge technologies.
             </div>
             <div class="section-items">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis commodi, velit neque ullam illo excepturi,
-                quod quibusdam reiciendis dolorum a natus est nam delectus? Possimus eaque optio veritatis earum officiis ut
-                porro consequatur doloribus ullam!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime libero, facilis quasi iusto dicta
-                voluptatum laudantium natus quod ex error rem tenetur dolorem, in eaque nam quia omnis perspiciatis
-                assumenda aperiam mollitia. Odio, velit explicabo.
+                <h3>Workshop</h3>
+                We host machine learning workshops every month.
+                Our workshops are designed to be beginner-friendly ; 
+                we focus on practical knowledge, ranging from basic model 
+                architectures to model serving and distributed training. 
+                Each workshop is comprised of a brief theory lecture and an interactive coding-based lab.
             </div>
             <div class="section-items">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis commodi, velit neque ullam illo excepturi,
-                quod quibusdam reiciendis dolorum a natus est nam delectus? Possimus eaque optio veritatis earum officiis ut
-                porro consequatur doloribus ullam!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime libero, facilis quasi iusto dicta
-                voluptatum laudantium natus quod ex error rem tenetur dolorem, in eaque nam quia omnis perspiciatis
-                assumenda aperiam mollitia. Odio, velit explicabo.
+                <h3>Labs</h3>
+                Machine learning (ML) algorithms are advancing quickly.
+                They’re powering applications in every industry, and will only 
+                become more ubiquitous over the next few years. Our Lab's aim is 
+                to bring a more practical focus. We are building a community of talented, 
+                passionate fellows, working together to use cutting-edge ML in public-facing projects.
+                Every semester, we host a demo day and invite the community to see what we’ve been building!
             </div>
         </div>
-    </div>
+<!--     </div> -->
     
 
     <div class="persons">
