Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
 
             <div class="section-items">
                 
-                ALICE is not just a club, it's a gateway to transforming ideas into reality, pushing boundaries, and contributing to a future shaped by cutting-edge technologies.
+                ALICE is not just a club, it's a gateway to transforming ideas into reality, 
+                pushing boundaries, and contributing to a future shaped by cutting-edge technologies.
+                ALICE is not only a hub for learning but also a catalyst for positive change and growth in 
+                the field of artificial intelligence and machine learning.
             </div>
             <div class="section-items">
                 <h3>Workshop</h3>
