Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -49,35 +49,46 @@
                 <input type="radio" name="question" id="1">
                 <label for="1">Our Responsiblities ?</label>
                 <div class="container1">
-                    <p>We conduct meetups, workshops, and seminars provide opportunities to learn from leading experts, engage in thought-provoking discussions, and stay updated on the latest trends and breakthroughs in AI and ML.</p>
+                    <p>We conduct meetups, workshops, and seminars provide opportunities to learn from leading experts,
+                        engage in thought-provoking discussions, and stay updated on the latest trends and breakthroughs in AI and ML.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="question" id="2">
                 <label for="2"> Our Club Objective?</label>
                 <div class="container1">
-                    <p>ALICE is dedicated to empowering members with the knowledge and skills needed to excel in the world of AI and ML. Through interactive workshops, collaborative projects, and a supportive community, we aim to cultivate a deep understanding of these cutting-edge technologies.</p>
+                    <p>ALICE is dedicated to empowering members with the knowledge and skills needed to excel in the world of AI and ML. 
+                        Through interactive workshops, collaborative projects, and a supportive community, we aim to cultivate a deep understanding 
+                        of these cutting-edge technologies.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="question" id="3">
                 <label for="3">What would you do in this club?</label>
                 <div class="container1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi consequuntur deserunt saepe perspiciatis rem. Laudantium quam quis pariatur velit quia dolorum. Minima, ad.</p>
+                    <p>Your active involvement would encompass a range of valuable contributions. You would eagerly participate in 
+                        workshops and hands-on projects, collaborating with fellow members to apply AI and ML concepts to real-world challenges.
+                        Leveraging your extensive knowledge, You would readily share insights, answer questions, 
+                     and engage in discussions to foster a deeper understanding of AI's concepts.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="question" id="4">
                 <label for="4">What we expect from the club?</label>
                 <div class="container1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi consequuntur deserunt saepe perspiciatis rem. Laudantium quam quis pariatur velit quia dolorum. Minima, ad.</p>
+                    <p>As a potential member, your expectations from the club should revolve around a vibrant community 
+                        of individuals who share similar interests. You should anticipate engaging discussions, collaborative activities, 
+                        and opportunities to learn and develop new skills. You should look forward to networking and building meaningful relationships with fellow members with 
+                        supportive and inclusive environment where ideas are exchanged, and personal growth is nurtured.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="question" id="5">
                 <label for="5">Should we join this club or not?</label>
                 <div class="container1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi consequuntur deserunt saepe perspiciatis rem. Laudantium quam quis pariatur velit quia dolorum. Minima, ad.</p>
+                    <p>Deciding whether to join a club hinges on a variety of factors that are uniquely tied to your personal preferences and aspirations.
+                        First and foremost, consider if the club's focus aligns with your passions and interests. 
+                        By becoming a member, you'd likely immerse yourself in an environment where those shared interests take center stage.</p>
                 </div>
             </li>
         </ul>
