Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <!--     <div class="services" id="services">
         <h1>Our Activities</h1> -->
-        <div class="section">
+        <div class="section" id="services">
 
             <div class="section-items">
                 
