Update_pre index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="teachers">
                 <div class="head">
                     <img src="hod.jpeg">
-                    <h3>Sartaz Khan</h3>
+                    <h3>Sartaj Khan</h3>
                     Club Instructor
                 </div>
                 <div class="coordinator">
