--- a/index.html
+++ b/index.html
@@ -181,4 +181,21 @@ Uttarakhand 248197
     </div>
 </body>
 
+<script>
+    document.onkeydown=function(e){
+        if(event.keyCode == 123){
+            return false;
+        }
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+            return false;
+        }
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+            return false;
+        }
+        if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+            return false;
+        }
+    }
+</script>
+
 </html>
